--- a/css/style.css
+++ b/css/style.css
@@ -35,13 +35,6 @@ body {
     }
 }
 
-/* mediaQuerie mobile FONT */
-@media screen and (max-width: 550px) {
-   /*  html {
-        font-size: 79%;
-    } */
-}
-
 /* header ---------------*/
 #header {
     grid-area: header;
@@ -72,6 +65,16 @@ body {
 #navbarSupportedContent, .color5header{
     color: #f8b63c;
 }
+.bagHeader {
+    position: fixed;
+    right: 16px;
+    top: 3vh;
+}
+.formHeader {
+    position: fixed;
+    right: 64px;
+    top: 3vh;
+}
 
 /* mediaQuerie mobile #header */
 @media (min-width: 992px) and (max-width: 1023px) {
@@ -82,6 +85,20 @@ body {
 @media screen and (min-width: 1024px) {
     .navbar-nav {
         display: none;
+    }
+}
+@media screen and (max-width: 575px) {
+    a, .navbar-brand {
+        font-size: 145%;
+    }
+}
+@media screen and (max-width: 991px) {
+    .formHeader {
+        position: unset;
+    }
+    .bagHeader {
+        display: none;
+        position: unset;
     }
 }
 
@@ -121,6 +138,8 @@ body {
     100% {transform: rotateY(180deg);}
 }
 .rotate {
+    position: relative;
+    right: 1vw;
     /*  animation-name: rotateY;
     animation-iteration-count: 1;
     animation-timing-function: linear;
@@ -147,12 +166,12 @@ body {
     background-color: #f13939;
 }
 .transitionColor3 {
-    width: 13vw;
+    width: 8vw;
     background-color: #ffffff;
     transition: all 0.3s;
 }
 .transitionColor3:hover {
-    width: 18vw;
+    width: 12vw;
     background-color: #b072bd;
 }
 .transitionColor4 {
@@ -199,7 +218,11 @@ body {
 }
 
 /* mediaQuerie mobile #footer */
-/* (aun sin necesitar) */
+@media screen and (max-width: 575px) {
+    #footer {
+        font-size: 60%;
+    }
+}
 
 /* -------- ESTILOS PAGES -------- */
 
@@ -240,9 +263,27 @@ body {
     height: 100%;
     object-fit: cover;
 }
-.libretasH {
-    grid-column: 1/3;
-    width: 75%;
+.estiloCajas {
+    margin: 1px;
+    border: 1px solid #f13939;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.estiloCajas, p {
+    font-size: 1rem;
+}
+.estiloCajas2 {
+    margin: 1px;
+    border: 1px solid #b072bd;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.estiloCajas2, p {
+    font-size: 1rem;
 }
 
 /* mediaQuerie mobile HOME */
@@ -275,7 +316,7 @@ body {
     border-style: double; */
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, 0.4fr);
+    grid-template-rows: repeat(3, 0.4fr);
     justify-items: center;
     align-items: center;
 }
@@ -283,18 +324,6 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-.tablasMarmol {
-    grid-column: 1/3;
-}
-.cuchilloBlanco {
-    grid-column: 1/3;
-}
-.cuchilloNegro {
-    grid-column: 1/3;
-}
-.cuchilloNegro2 {
-    grid-column: 1/3;
 }
 
 /* mediaQuerie mobile OBJECT KEEPERS */
