--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,8 @@ body {
     font-size: 0.8rem;
     padding: 3vh;
     background-color: #c8ebf5;
+    display: flex;
+    justify-content: space-between;
 }
 
 /* mediaQuerie mobile #footer */
@@ -300,14 +302,14 @@ body {
     grid-area: content;
 }
 #sectionOk h2 {
-    padding: 5vh;
+    padding: 3vh;
     text-align: left;
     line-height: 2;
     font-size: 1.5rem;
     color: #f13939;
 }
 #sectionOk p {
-    padding: 0 5vw;
+    padding: 0 8vw;
 }
 .galeriaOk {
     width: 70vw;
@@ -353,7 +355,7 @@ body {
     border-style: double; */
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(8, 0.5fr);
+    grid-template-rows: repeat(7, 0.5fr);
     justify-items: center;
     align-items: center;
 }
@@ -361,23 +363,6 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-.bandejaCobre {
-    grid-column: 1/3;
-    width: 50%;
-}
-.libretasC {
-    grid-column: 1/3;
-    width: 75%;
-}
-.vasoC {
-    width: 75%;
-}
-.vaso2 {
-    width: 72%;
-}
-.lapiceras {
-    width: 50%;
 }
 
 /* mediaQuerie mobile CATALOG */
@@ -394,14 +379,14 @@ body {
     grid-area: content;
 }
 #sectionUs h2, h3 {
-    padding: 5vh;
+    padding: 3vh;
     text-align: left;
     line-height: 2;
     font-size: 1.5rem;
     color: #3c9370;
 }
 #sectionUs p {
-    padding: 0 5vw;
+    padding: 0 8vw;
    /*  line-height: ;
     word-spacing: ; 
     letter-spacing: ; */
@@ -410,18 +395,30 @@ body {
     /* border: 1.5vh solid #59daa6;
     border-style: double; */
     background-color: #59daa6;
-    margin: 0 0 5vh 5vh;
+    margin: 5vh;
     display: inline-block
 }
 .youtube {
-    width: 70vw;
-    height: 60vh;
+    width: 560px;
+    height: 315px;
 }
 
 /* mediaQuerie mobile US */
 @media screen and (max-width: 1023px) {
     #sectionUs {
         width: auto;
+    }
+}
+@media screen and (max-width: 479px) {
+    .youtube {
+        width: 280px;
+        height: 150px;
+    }
+}
+@media (min-width: 480px) and (max-width: 605px) {
+    .youtube {
+        width: 440px;
+        height: 240px;
     }
 }
 
@@ -475,10 +472,10 @@ body {
     padding: 0 3vw 5vh 3vw;
 }
 .estampilla { /* ESTAMPILLA */
-    width: 20vw;
+    width: 300px;
     background-color: #f8b63c;
     background-image: url(../img/GS_logo_3.png);
-    background-size: 2vw;
+    background-size: 20px;
     background-position: right;
     background-repeat: repeat-y;
 }
