-Trabajo en todo el sitio. Agrego estilos de card, botones, estilo de >footer. -Aplico map, map-get, mixin y extend.

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,55 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr auto 0.5fr; } }
 
+/* Cajas y Botones --------------- */
+.estiloCajas, .estiloCajas2, .estiloCajas3 {
+  margin: 1px;
+  border: 1px solid #f13939;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .estiloCajas p, .estiloCajas2 p, .estiloCajas3 p {
+    font-size: 1rem;
+    margin: 5px 20px; }
+
+.estiloCajas2 {
+  border-color: #b072bd; }
+
+.estiloCajas3 {
+  border-color: #c8ebf5; }
+
+.btn-red {
+  display: inline-block;
+  padding: 10px;
+  margin: 10px 0 15px 0;
+  text-decoration: none;
+  border: 1px solid #f13939;
+  border-radius: 5px;
+  color: #f13939; }
+
+.btn-violet {
+  display: inline-block;
+  padding: 10px;
+  margin: 10px 0 15px 0;
+  text-decoration: none;
+  border: 1px solid #b072bd;
+  border-radius: 5px;
+  color: #b072bd; }
+
+/* mediaQuerie mobile Cajas - Botones */
+@media (min-width: 476px) and (max-width: 684px) {
+  .estiloCajas p, .estiloCajas2 p, .estiloCajas3 p, .estiloCajas2 p {
+    font-size: 10px; }
+  .estiloCajas .btn-red, .estiloCajas2 .btn-red, .estiloCajas3 .btn-red, .estiloCajas .btn-violet, .estiloCajas2 .btn-violet, .estiloCajas3 .btn-violet, .estiloCajas2 .btn-red, .estiloCajas2 .btn-violet {
+    font-size: 12px; } }
+
+@media screen and (max-width: 475px) {
+  .estiloCajas p, .estiloCajas2 p, .estiloCajas3 p, .estiloCajas2 p {
+    font-size: 8px; }
+  .estiloCajas .btn-red, .estiloCajas2 .btn-red, .estiloCajas3 .btn-red, .estiloCajas .btn-violet, .estiloCajas2 .btn-violet, .estiloCajas3 .btn-violet, .estiloCajas2 .btn-red, .estiloCajas2 .btn-violet {
+    font-size: 10px; } }
+
 /* header ---------------*/
 #header {
   grid-area: header; }
@@ -199,12 +248,16 @@ body {
   padding: 3vh;
   background-color: #c8ebf5;
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  align-items: center; }
+  #footer div i {
+    color: #000;
+    font-size: 1rem; }
 
 /* mediaQuerie mobile #footer */
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 500px) {
   #footer {
-    font-size: 60%; } }
+    font-size: 50%; } }
 
 /* -------- ESTILOS PAGES -------- */
 /* HOME */
@@ -241,28 +294,6 @@ body {
   height: 100%;
   object-fit: cover; }
 
-.estiloCajas {
-  margin: 1px;
-  border: 1px solid #f13939;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
-
-.estiloCajas, p {
-  font-size: 1rem; }
-
-.estiloCajas2 {
-  margin: 1px;
-  border: 1px solid #b072bd;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
-
-.estiloCajas2, p {
-  font-size: 1rem; }
-
 /* mediaQuerie mobile HOME */
 @media screen and (max-width: 1023px) {
   .galeriaHome {
@@ -281,7 +312,7 @@ body {
   font-size: 1.5rem;
   color: #f13939; }
 
-#sectionOk p {
+.tituloOk p {
   margin: 0 20px 40px 20px; }
 
 .galeriaOk {
@@ -354,7 +385,7 @@ body {
   margin: 0 20px; }
 
 .videoUs {
-  background-color: #59daa6;
+  background-color: #3c9370;
   margin: 0 20px 10vh 20px;
   display: inline-block; }
 
@@ -399,7 +430,8 @@ body {
   color: #f8b63c; }
 
 .formContact {
-  background-color: #f8b63c;
+  border: 1px solid #f8b63c;
+  border-radius: 5px;
   margin: 0 20px;
   padding: 10px 0; }
 
@@ -428,7 +460,8 @@ body {
 
 .estampilla {
   /* ESTAMPILLA */
-  width: 280px;
+  width: 270px;
+  height: 90px;
   background-color: #f8b63c;
   background-image: url(../img/GS_logo_3.png);
   background-size: 20px;
@@ -436,7 +469,7 @@ body {
   background-repeat: repeat-y; }
 
 .wwshipp {
-  padding: 4px 8px; }
+  padding: 1px 8px; }
 
 .datos {
   padding-top: 2vh; }
