--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -8,3 +8,7 @@ $colorRed: #f13939;
 $colorViolet: #b072bd;
 $colorGreen: #3c9370;
 $colorOrange: #f8b63c;
+$estilosRedes: (
+    color: $colorBlack,
+    font-size: 1rem,
+);
