--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,11 +5,10 @@
     box-sizing: border-box;
 }
 
-/* -------- ESTILOS GENERALES -------- */
-
 //IMPORT PARTIALS
 @import "vars";
 
+/* -------- ESTILOS GENERALES -------- */
 
 /* body ---------------*/
 body {
@@ -36,6 +35,66 @@ body {
         "footer";
         grid-template-columns: 1fr;
         grid-template-rows: 1fr auto 0.5fr;
+    }
+}
+
+/* Cajas y Botones --------------- */
+.estiloCajas {
+    margin: 1px;
+    border: 1px solid $colorRed;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    p {
+        font-size: 1rem;
+        margin: 5px 20px;
+    }
+}
+.estiloCajas2 {
+    @extend .estiloCajas;
+    border-color: $colorViolet;
+}
+.estiloCajas3 {
+    @extend .estiloCajas;
+    border-color: $colorLightBlue;
+}
+
+@mixin btn ($color) {
+    display: inline-block;
+    padding: 10px;
+    margin: 10px 0 15px 0;
+    text-decoration: none;
+    border: 1px solid $color;
+    border-radius: 5px;
+    color: $color;
+}
+.btn-red {
+    @include btn($colorRed);
+}
+.btn-violet {
+    @include btn($colorViolet)
+}
+
+/* mediaQuerie mobile Cajas - Botones */
+@media (min-width: 476px) and (max-width: 684px) {
+    .estiloCajas, .estiloCajas2 {
+        p {
+            font-size: 10px;
+        }
+        .btn-red, .btn-violet {
+            font-size: 12px;
+        }
+    }
+}
+@media screen and (max-width: 475px) {
+    .estiloCajas, .estiloCajas2 {
+        p {
+            font-size: 8px;
+        }
+        .btn-red, .btn-violet {
+            font-size: 10px;
+        }
     }
 }
 
@@ -221,12 +280,17 @@ body {
     background-color: #c8ebf5;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    div i {
+        color: map-get($estilosRedes, color);
+        font-size: map-get($estilosRedes, font-size);
+    }
 }
 
 /* mediaQuerie mobile #footer */
-@media screen and (max-width: 575px) {
+@media screen and (max-width:500px) {
     #footer {
-        font-size: 60%;
+        font-size: 50%;
     }
 }
 
@@ -257,7 +321,6 @@ body {
         }
     }
 }
-
 .galeriaHome {
     width: 70vw;
     margin: 0 20px;
@@ -272,30 +335,6 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-
-.estiloCajas {
-    margin: 1px;
-    border: 1px solid $colorRed;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.estiloCajas, p {
-    font-size: 1rem;
-}
-.estiloCajas2 {
-    margin: 1px;
-    border: 1px solid #b072bd;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.estiloCajas2, p {
-    font-size: 1rem;
 }
 
 /* mediaQuerie mobile HOME */
@@ -319,7 +358,7 @@ body {
     font-size: 1.5rem;
     color: #f13939;
 }
-#sectionOk p {
+.tituloOk p {
     margin: 0 20px 40px 20px;
 }
 .galeriaOk {
@@ -400,7 +439,7 @@ body {
     margin: 0 20px;
 }
 .videoUs {
-    background-color: #59daa6;
+    background-color: #3c9370;
     margin: 0 20px 10vh 20px;
     display: inline-block
 }
@@ -452,7 +491,8 @@ body {
     color: #f8b63c
 }
 .formContact {
-    background-color: #f8b63c;
+    border: 1px solid #f8b63c;
+    border-radius: 5px;
     margin: 0 20px;
     padding: 10px 0;
 }
@@ -482,7 +522,8 @@ body {
     padding: 0 3vw 5vh 20px;
 }
 .estampilla { /* ESTAMPILLA */
-    width: 280px;
+    width: 270px;
+    height: 90px;
     background-color: #f8b63c;
     background-image: url(../img/GS_logo_3.png);
     background-size: 20px;
@@ -490,7 +531,7 @@ body {
     background-repeat: repeat-y;
 }
 .wwshipp {
-    padding: 4px 8px;
+    padding: 1px 8px;
 }
 .datos {
     padding-top: 2vh;
