--- a/scss/style.scss
+++ b/scss/style.scss
@@ -58,6 +58,12 @@ body {
 .estiloCajas3 {
     @extend .estiloCajas;
     border-color: $colorBlack;
+    .marcadorRed {
+        color: $colorRed;
+    }
+    .marcadorViolet {
+        color: $colorViolet;
+    }
 }
 
 @mixin btn ($color) {
@@ -529,6 +535,10 @@ body {
     background-size: 20px;
     background-position: right;
     background-repeat: repeat-y;
+}
+.linkRedes {
+    text-decoration: none;
+    color: $colorBlack;
 }
 .wwshipp {
     padding: 1px 8px;
